Volunteer: Updated responsiveness and fixed sections
Added form section, fixed background blur section
so that it no longer overlaps with footer.

L=ENG-381

TEST=manual
Worked locally

--- a/js/src/patina/pages/volunteer/Volunteer.module.css
+++ b/js/src/patina/pages/volunteer/Volunteer.module.css
@@ -1,17 +1,7 @@
-/* Initial hero section */
-.wrapper {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 24px;
-}
-
-.text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 24px;
+.heroContainer {
+  @media (max-width: rem(996px)) {
+    margin: rem(16px);
+  }
 }
 
 .title {
@@ -33,8 +23,9 @@
   }
 }
 
-.volunteerImg {
-  width: 40%;
+.colored {
+  text-decoration: underline var(--mantine-color-patina-blue-light);
+  color: var(--mantine-color-patina-blue-light);
 }
 
 /* Volunteer Cards */
@@ -59,6 +50,7 @@
   border-radius: 20px;
   background: rgba(255, 61, 61, 0.2);
   filter: blur(100px);
+  overflow: hidden;
   position: absolute;
   z-index: 0;
 }
@@ -70,6 +62,7 @@
   z-index: 1;
   position: relative;
   width: 100%;
+  background-image: radial-gradient(#ff3d3d33 0%, #1a1b1e 65%);
 }
 
 .emailText {
